<resources>
    <string name="app_name" translatable="false">TrabalhoFinal</string>
    <string name="bus_icon">Icon Autocarro</string>
    <string name="searching">A procurar</string>
    <string name="title_activity_maps" translatable="false">Trabalho Final</string>
    <string name="bus_stop_found">Foi encontrada uma paragem!</string>
    <string name="see_info">Pretende ver a informação?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="title_activity_paragem">Paragem</string>
    <string name="schedules">Horários</string>
    <string name="title_activity_carreira">Carreira</string>
    <string name="title_activity_direcoes">Direções</string>
    <string name="average_time">Tempo médio</string>
    <string name="distance">Distância</string>
    <string name="bus_stops">Paragens</string>
    <string name="directions">Direções</string>
    <string name="error_loading">Erro ao carregar</string>
</resources>