<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_popup_info"
    android:elevation="10dp">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@string/bus_icon"
            app:srcCompat="@drawable/bus_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:text="@string/bus_stop_found"
                android:textSize="22dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto"
                android:text="@string/see_info"
                android:textColor="@color/black"
                android:textSize="19dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="2"

                    android:background="@drawable/ic_button"
                    android:padding="1dp">

                    <Button
                        android:id="@+id/cancelInfoPopupButton"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/no"
                        android:padding="0.1dp"
                        android:layout_weight="1"
                        style="@style/WhiteButton"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_button"
                    android:backgroundTint="@color/green_500"
                    android:layout_weight="2"
                    android:padding="1dp">

                    <Button
                        android:id="@+id/goToInfoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/yes"
                        android:padding="0.1dp"
                        android:layout_weight="1"
                        style="@style/WhiteButton"
                        />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>