<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        tools:context=".CarreiraActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/map"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sentido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:textSize="26dp"
                android:textColor="@color/green_500" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="20dp"
                    android:textColor="@color/gray_500"
                    android:layout_marginRight="10dp"
                    android:text="@string/average_time"
                    />

                <TextView
                    android:id="@+id/tempo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="20dp"
                    android:textColor="@color/gray_500"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="20dp"
                    android:textColor="@color/gray_500"
                    android:layout_marginRight="10dp"
                    android:text="@string/distance"
                    />

                <TextView
                    android:id="@+id/distancia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="20dp"
                    android:textColor="@color/gray_500"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginHorizontal="10dp"
                android:textSize="24dp"
                android:textColor="@color/gray_500"
                android:text="@string/bus_stops"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lista_paragens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/r_paragem"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>